<resources>
    <string name="app_name"> UEN Midline Validation - Urdu </string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="tdheading"> SECTION D: HOUSEHOLD MEMBER’S INFORMATION </string>
    <string name="teheading"> SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15 &#8211; 49 years in the household) </string>
    <string name="te2heading"> MATERNAL MORTALITY STATUS </string>
    <string name="tfheading"> SECTION F: ANTENATAL CARE </string>
    <string name="tiheading"> SECTION I: CHILD HEALTH </string>
    <string name="ti2heading"> SECTION I2: ACUTE RESPIRATORY INFECTION (ARI) </string>
    <string name="tjheading"> SECTION J: IMMUNIZATION </string>
    <string name="tkheading"> SECTION K: FAMILY PLANNING </string>
    <string name="tlheading"> SECTION L: WOMEN EMPOWERMENT </string>
    <string name="tmheading"> SECTION M: SOCIOL ECONOMIC STATUS OF HOUSEHOLD </string>
    <string name="tnheading"> SECTION N: WATER AND SANITATION </string>
    <string name="toheading"> SECTION O: HANDWASHING </string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="title_activity_family_members_list"> Family Members List </string>
    <string name="sM"> یو سی </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="total"> Total </string>
    <string name="mwra"> MWRA </string>
    <string name="under5"> Child Under 5 </string>
    <string name="taheading"> SECTION A: HH Identification </string>
    <string name="a101"> کلسٹر نمبر </string>
    <string name="a101a"> یہ معلومات ضلعی بنیاد پر بنائی گئی گاؤں کی فہرست پر مبنی ہوں گی۔ ہر انٹرویو کرنے والے کو جس علاقے کا وہ دورہ کرے گا کلسٹرز کی ایک فہرست دی جائے گی اور انٹرویو شروع کرنے سے پہلے اسی فہرست سے یہ معلومات درج کی جائیں گی۔ </string>
    <string name="a102"> کلسٹر کی قسم </string>
    <string name="a102a"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ کرتی ہے </string>
    <string name="a102b"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ نہیں کرتی </string>
    <string name="a103"> فارم سیریل نمبر: </string>
    <string name="a104">" صوبہ: "</string>
    <string name="a104a"> بلوچستان </string>
    <string name="a104b"> پنجاب </string>
    <string name="a104c"> سندھ </string>
    <string name="a105">" ضلع: "</string>
    <string name="a105a"> جعفرآباد </string>
    <string name="a105a_title"> بلوچستان </string>
    <string name="a105b"> نصیرآباد </string>
    <string name="a105c"> لسبیلہ </string>
    <string name="a105d"> مظفر گڑھ </string>
    <string name="a105d_title"> پنجاب </string>
    <string name="a105e"> رحیم یار خان </string>
    <string name="a105f"> بدین </string>
    <string name="a105f_title"> سندھ </string>
    <string name="a105g"> سانگھڑ </string>
    <string name="a105h"> قمبر شہداد کوٹ </string>
    <string name="a106">" تحصیل: "</string>
    <string name="a107">" یوسی: "</string>
    <string name="a108"> جگہ / تحقیق: </string>
    <string name="a108a"> شہری </string>
    <string name="a108b"> دیہی </string>
    <string name="a109"> گاؤں کا نام: </string>
    <string name="a110"> بلاک / محلہ </string>
    <string name="a111">" گلی: "</string>
    <string name="a112"> گھر / خاندان نمبر </string>
    <string name="a112a"> دستیاب نہیں </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="b101"> Latitude (Example: 24.861462) </string>
    <string name="b102"> Longitude (Example:67.009939) </string>
    <string name="c101"> C101:\t کیا رضامندی لی گئی تھی ؟ </string>
    <string name="c101a"> زبانی اجازت نامہ </string>
    <string name="c101aa"> جی ہاں </string>
    <string name="c101ab"> نہیں </string>
    <string name="c101b"> C101b:\t تحریری اجازت نامہ </string>
    <string name="c101ba"> جی ہاں </string>
    <string name="c101bb"> نہیں </string>
    <string name="d101"> D101:\t گھر کے فرد کا سیریل نمبر ؟ </string>
    <string name="d101name"> نام اور سیریل نمبر: </string>
    <string name="d102"> D102:\t گھر کے فرد کا نام کیا ہے ؟ </string>
    <string name="d102a"> برا ئے مہربانی پہلے مجھے ان تمام افراد کا نام بتائیں جو عام طور پر یہاں رہتے ہیں، خاندان کے سربراہ سے شروع کریں </string>
    <string name="d103"> D103:\t گھر کے سربراہ سے رشتہ ؟ </string>
    <string name="d103hint"> (نام) کا گھر کے سربراہ سے کیا تعلق ہے ؟ </string>
    <string name="d103a"> گھر کا سربراہ </string>
    <string name="d103b"> بیوی / شوہر </string>
    <string name="d103c"> بیٹا / بیٹی </string>
    <string name="d103d"> داماد / بہو </string>
    <string name="d103e"> پوتا، پوتی / نواسا، نواسی </string>
    <string name="d103f"> والدین </string>
    <string name="d103g"> ساس / سُسر </string>
    <string name="d103h"> بھائی /  بہن </string>
    <string name="d103i"> دیور، دیورانی / بھابھی، بہنوئی / سالا، سالی </string>
    <string name="d103j"> بھتیجا، بھتیجی / بھانجا، بھانجی </string>
    <string name="d103k"> دادا، دادی / نانا، نانی </string>
    <string name="d103l"> پھُوپو، پھُوپا / خالو، خاله / چچا، چچی / ماموں، ممانی </string>
    <string name="d103m"> سوتیلے / رضاعی / لے پالک بچے </string>
    <string name="d103n"> گحریلو ملازم </string>
    <string name="d103o"> معلوم نہیں </string>
    <string name="d104"> D104:\t گھر کے فرد کی صنف کیا ہے ؟ </string>
    <string name="d104a"> لڑکا </string>
    <string name="d104b"> لڑکی </string>
    <string name="d105"> D105:\t گھر کے فرد کی ازدواجی حیثیت کیا ہے ؟ </string>
    <string name="d105a"> شادی شدہ </string>
    <string name="d105b"> غیر شادی شدہ </string>
    <string name="d105c"> بیوہ / رنڈوہ </string>
    <string name="d105d"> طلاق یافتہ / الگ رہتا / رہتی ہوں </string>
    <string name="d106"> D106:\t  اگر ممبر کی فہرست میں باپ سے رشتہ نہیں بتایا گیا تو ‘NA’ لکھیں ۔ </string>
    <string name="d106a"> باپ کا سیریل نمبر </string>
    <string name="d106b"> NA </string>
    <string name="d107"> D107:\t اگر ممبر کی فہرست میں ماں سے رشتہ نہیں بتایا گیا ‘NA’ تو لکھیں ۔ </string>
    <string name="d107a"> ماں کا سیریل نمبر </string>
    <string name="d107b"> NA </string>
    <string name="d108"> D108:\t تاریخ پیدائش : اگر تاریخ پیدائش معلوم نہیں تو ‘00’ ریکارڈ کریں اور عمر درج کریں </string>
    <string name="d108a"> تاریخ </string>
    <string name="d108b"> مہینہ </string>
    <string name="d108c"> سال </string>
    <string name="d109"> D109:\t گھر کے فرد کی عمر کیا ہے ؟ </string>
    <string name="d109hint"> اگر تاریخ پیدائش ریکارڈ کی گئی تھی تو عمر میں خودبخود نمودار D.O.B اور D.O.I ہو جائیگی 5 سال سے کم عمر بچے کے لئے یہ سوال نہیں کھلے کوڈ ظاہر ‘NA’ گا اور خود کار نظام کے تحت ہو جائیگا </string>
    <string name="d109a"> عمر </string>
    <string name="d109b"> مہینہ </string>
    <string name="d109c"> سال </string>
    <string name="d110"> D110:\t تعلیم: (نام) کی مکمل تعلیم کتنی ہے ۔ </string>
    <string name="d110a"> کوئی نہیں </string>
    <string name="d110b"> پرائمری سے پہلے </string>
    <string name="d110c"> پرائمری (1 سے 5) </string>
    <string name="d110d"> مڈل (6 سے 8) </string>
    <string name="d110e"> سیکنڈری (9 سے 10) </string>
    <string name="d110f"> انٹرمیڈیٹ </string>
    <string name="d110g"> گریجویشن </string>
    <string name="d110h"> ماسٹرز </string>
    <string name="d110i"> پی ایچ ڈی </string>
    <string name="d110j"> ڈپلوما (آئی ٹی / الیکٹریکل، مکینیکل، سول) </string>
    <string name="d110k"> مزہبی تعلیم (حافظ / عالم) </string>
    <string name="d110l"> معلوم نہیں </string>
    <string name="d110m"> لاگو نہیں ہوتا </string>
    <string name="d111"> D111\t پیشہ: (نام) کا پیشہ کیا ہے۔ </string>
    <string name="d111x"> 5 سال سے کم عمر بچے کے لئے یہ سوال نہیں کھلے گا اور خودکار نظام کے تحت ‘NA’ کوڈ ظاہر ہو جائیگا۔ </string>
    <string name="d111a"> گھریلو خاتون </string>
    <string name="d111b"> غیر ہنرمند مزدور </string>
    <string name="d111c"> ہنرمند مزدور </string>
    <string name="d111d"> زراعت </string>
    <string name="d111e"> سیلز اور خدمات </string>
    <string name="d111f"> پروفیشنل </string>
    <string name="d111g"> طالب علم </string>
    <string name="d111h"> بے روزگار </string>
    <string name="d111i"> ریٹائرڈ </string>
    <string name="d111j"> لاگو نہیں ہوتا </string>
    <string name="d112"> D112:\t گھرانے کے افراد کی مجموعئی تعداد ؟ </string>
    <string name="d113"> گھر میں تولیدی صحت کی حامل خواتین کی مجموعئی تعداد D113:\t </string>
    <string name="d114"> گھر میں موجود 5 سال سے کم عمر بچوں کی مجموعئی تعداد D114:\t </string>
    <string name="d115"> D115:\t کیا یہ شخص گھر پر موجود ہے ؟ </string>
    <string name="d115a"> ہاں </string>
    <string name="d115b"> نہیں </string>
    <string name="e100"> خاتون کا نام:  E100:\t </string>
    <string name="g102"> G102:\t (نام) کی پیدائش کہاں ہوئی تھی ؟ </string>
    <string name="g102a"> گھر پر </string>
    <string name="g102b"> سرکاری مرکز صحت </string>
    <string name="g102c"> نجی مرکز صحت </string>
    <string name="g102d"> رفاہی ادارہ یا مرکز صحت </string>
    <string name="g102e"> مرکز صحت جاتے ہوئے راستے میں </string>
    <string name="g102f"> پیدائش اسٹیشن ( کمیونیٹی مڈوائف ) </string>
    <string name="g109"> G109:\t (نام) کی پیدائش کس طرح ہوئی تھی ؟ </string>
    <string name="g109a"> نارمل زچگی (NVD) </string>
    <string name="g109b"> آپریشن سے (C-Section) </string>
    <string name="g109c"> ویکیوم کی مدد سے </string>
    <string name="g109d"> فورسیپ کی مدد سے </string>
    <string name="g126"> G126:\t کیا لیڈی ہیلتھ ورکر نے آپ کو صاف ڈیلوری کٹ فراہم کی تھی ؟ </string>
    <string name="k102"> K102:\t کیا آپ یا آپ کے شوہر نے حمل کو روکنے کے لئے کبھی کوئی مانع حمل طریقہ کا استعمال کیا ہے ؟ </string>
    <string name="l107"> L107:\t زیادہ تر کون فیصلہ لیتا ہے کہ آپ کے شوہر کی کمائی کیسے خرچ ہوگی ؟ </string>
    <string name="l107a"> آپ خود </string>
    <string name="l107b"> شوہر </string>
    <string name="l107c"> دونوں مل کے </string>
    <string name="l107d"> وہ کچھ نہیں کماتا </string>
    <string name="l114"> L114:\t کیا خاندانی منصوبہ بندی کےاستعمال کا فیصلہ آپ کرتی ہیں ؟ </string>
    <string name="l114c"> دونوں مل کے </string>
    <string name="end_interview"> ختم </string>
    <string name="nextSection"> اگلا </string>
</resources>