<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_ml_validation.ui.sections.SectionGActivity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fldGrpSectionG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- g102  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVg102"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/g102" />

                        <RadioGroup
                            android:id="@+id/g102"
                            style="@style/radiogroup">

                            <RadioButton
                                android:id="@+id/g102a"
                                style="@style/radiobutton"
                                android:text="@string/g102a" />

                            <RadioButton
                                android:id="@+id/g102b"
                                style="@style/radiobutton"
                                android:text="@string/g102b" />

                            <RadioButton
                                android:id="@+id/g102c"
                                style="@style/radiobutton"
                                android:text="@string/g102c" />

                            <RadioButton
                                android:id="@+id/g102d"
                                style="@style/radiobutton"
                                android:text="@string/g102d" />

                            <RadioButton
                                android:id="@+id/g102e"
                                style="@style/radiobutton"
                                android:text="@string/g102e" />

                            <RadioButton
                                android:id="@+id/g102f"
                                style="@style/radiobutton"
                                android:text="@string/g102f" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- g109  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVg109"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/g109" />

                        <RadioGroup
                            android:id="@+id/g109"
                            style="@style/radiogroup">

                            <RadioButton
                                android:id="@+id/g109a"
                                style="@style/radiobutton"
                                android:text="@string/g109a" />

                            <RadioButton
                                android:id="@+id/g109b"
                                style="@style/radiobutton"
                                android:text="@string/g109b" />

                            <RadioButton
                                android:id="@+id/g109c"
                                style="@style/radiobutton"
                                android:text="@string/g109c" />

                            <RadioButton
                                android:id="@+id/g109d"
                                style="@style/radiobutton"
                                android:text="@string/g109d" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- g126  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVg126"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/g126" />

                        <RadioGroup
                            android:id="@+id/g126"
                            style="@style/radiogroup">

                            <RadioButton
                                android:id="@+id/g126a"
                                style="@style/radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/g126b"
                                style="@style/radiobutton"
                                android:text="@string/no" />

                            <RadioButton
                                android:id="@+id/g12697"
                                style="@style/radiobutton"
                                android:text="@string/na" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>