<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_ml_validation.ui.sections.SectionKActivity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/fldGrpSectionk01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- k102  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVk102"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/k102" />

                    <RadioGroup
                        android:id="@+id/k102"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/k102a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/k102b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- l114  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVl114"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/l114" />

                    <RadioGroup
                        android:id="@+id/l114"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/l114a"
                            style="@style/radiobutton"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/l114b"
                            style="@style/radiobutton"
                            android:text="@string/no" />

                        <RadioButton
                            android:id="@+id/l114c"
                            style="@style/radiobutton"
                            android:text="@string/l114c" />

                        <RadioButton
                            android:id="@+id/l11496"
                            style="@style/radiobutton"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/l11496x"
                            style="@style/EditTextAlpha"
                            android:hint="@string/specify"
                            android:tag="l11496"
                            android:text='@{l11496.checked? l11496x.getText().toString() : ""}'
                            android:visibility='@{l11496.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- l107  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVl107"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/l107" />

                    <RadioGroup
                        android:id="@+id/l107"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/l107a"
                            style="@style/radiobutton"
                            android:text="@string/l107a" />

                        <RadioButton
                            android:id="@+id/l107b"
                            style="@style/radiobutton"
                            android:text="@string/l107b" />

                        <RadioButton
                            android:id="@+id/l107c"
                            style="@style/radiobutton"
                            android:text="@string/l107c" />

                        <RadioButton
                            android:id="@+id/l107d"
                            style="@style/radiobutton"
                            android:text="@string/l107d" />

                        <RadioButton
                            android:id="@+id/l10796"
                            style="@style/radiobutton"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/l10796x"
                            style="@style/EditTextAlpha"
                            android:hint="@string/specify"
                            android:tag="l10796"
                            android:text='@{l10796.checked? l10796x.getText().toString() : ""}'
                            android:visibility='@{l10796.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>